# inner-change

./: .gitignore  README.md  inner-change.cabal  mkcert.hs  mkdocset.hs  stack.yaml
app/: Main.hs
src/Network/InnerChange/: Proxy.hs  SoapTypes.hs  SoapTypes.old.hs
src/Network/InnerChange/EWS/: Types.hs
src/Network/InnerChange/Soap/: Luke.hs  LukeStuff.hs  Types.hs
src/Network/InnerChange/XML/: ElementUtil.hs  TH.hs  Types.hs  Types.old.hs
test/: doctests.hs
