name:                inner-change
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/inner-change#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Network.InnerChange.Proxy
                     , Network.InnerChange.SoapTypes
                     , Network.InnerChange.Soap.Types
                     , Network.InnerChange.Soap.Luke
  build-depends:       base >= 4.7 && < 5
                     , blaze-builder
                     , blaze-markup
                     , bytestring
                     , conduit
                     , containers
                     , cryptonite
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , QuickCheck
                     , template-haskell
                     , text
                     , utf8-string
                     , vector
                     , wai
                     , wai-conduit
                     , warp
                     , xml-conduit

executable ich
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , inner-change
                     , optparse-applicative
  default-language:    Haskell2010

test-suite ich-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , inner-change
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -threaded
  main-is:             doctests.hs
  default-language:    Haskell2010
  build-depends:       base
                     , doctest

source-repository head
  type:     git
  location: https://github.com/githubuser/inner-change
